# ATELIER

./: .env.example  .gitignore  DESIGN.md  README.md  liste_modeles.json  pyproject.toml  run_dev.py
app/: main.py
app/api/v1/: auth.py  chat.py  models.py  settings.py
app/core/: auth.py  config.py
app/core/db/: models.py  session.py
app/inference/: driver.py
docs/: phase1-verification.md
tests/: __init__.py  conftest.py  test_auth.py  test_chat_conversations.py  test_health.py  test_migration.py  test_models_catalog.py
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  routes.tsx
web/src/components/: ChatStream.tsx
web/src/components/chat/: ChatStream.tsx  Composer.tsx  MessageBubble.tsx
web/src/components/layout/: Sidebar.tsx  TopBar.tsx
web/src/components/models/: ModelCard.tsx
web/src/components/ui/: EmptyState.tsx  Spinner.tsx
web/src/lib/: api.ts  hooks.ts  queryKeys.ts  types.ts
web/src/pages/: Chat.tsx  Login.tsx  Models.tsx  Observability.tsx  Onboarding.tsx  Settings.tsx
