[project]
name = "localai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "sqlmodel>=0.0.22",
  "alembic>=1.13",
  "sqlalchemy>=2.0",
  "aiosqlite>=0.20",
  "chromadb>=0.5.4",
  "openai>=1.55",
  "httpx>=0.27",
  "loguru>=0.7",
  "prometheus-client>=0.21",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "argon2-cffi>=23.1",
  "itsdangerous>=2.2",
  "slowapi>=0.1.5",
  "pyotp>=2.9",
  "cachetools>=5.5",
  "pypdf>=5.1",
  "docling>=2.1",
  "sentence-transformers>=3.2",
  "rank-bm25>=0.2",
  "pyyaml>=6.0.2",
  "pydantic-settings>=2.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E","F","I","B","UP","S","ASYNC","RUF","TCH"]
# B008: standard FastAPI Depends() pattern — not a bug
# B904: raise within except — HTTP exceptions don't need chaining
ignore = ["B008", "B904"]

[tool.pyright]
include = ["app"]
strict = ["app/**"]
